<resources>
    <string name="app_name" translatable="false">La Cocina Mágica</string>

    <string name="s_action_calendar">Calendar</string>
    <string name="s_action_reels">Reels</string>
    <string name="s_action_home">Home</string>
    <string name="s_action_recipes">Recipes</string>
    <string name="s_action_account">Account</string>

    <string name="s_addRecipe_tvTitle">Title</string>
    <string name="s_addRecipe_tvDesc">Description</string>
    <string name="s_addRecipe_tvCategory">Categories</string>
    <string name="s_addRecipe_tvPortions">Portions</string>
    <string name="s_addRecipe_tvTime">Time</string>
    <string name="s_addRecipe_tvMinutes">minutes</string>
    <string name="s_addRecipe_tvIngredients">Ingredients</string>
    <string name="s_addRecipe_tvSteps">Steps</string>
    <string name="s_addRecipe_tvDifficulty">Difficulty</string>

    <string-array name="arr_difficulty">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string name="s_addRecipe_btnSave">Save</string>

    <string name="s_err_noTitle">Title is required</string>
    <string name="s_err_noIngredients">Ingredients are required</string>
    <string name="s_err_noSteps">Steps are required</string>
    <string name="s_err_noTime">Time is required</string>
    <string name="s_err_noPortions">Portions are required</string>
    <string name="s_err_timeInvalid">Time is invalid</string>
    <string name="s_err_portionsInvalid">Portions are invalid</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>