<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_calendar"
        android:title="@string/s_action_calendar"
        android:icon="@drawable/ic_edit_calendar" />

    <item android:id="@+id/action_reels"
        android:title="@string/s_action_reels"
        android:icon="@drawable/ic_movie" />

    <item android:id="@+id/action_home"
        android:title="@string/s_action_home"
        android:icon="@drawable/ic_home" />

    <item android:id="@+id/action_recipes"
        android:title="@string/s_action_recipes"
        android:icon="@drawable/ic_book" />

    <item android:id="@+id/action_account"
        android:title="@string/s_action_account"
        android:icon="@drawable/ic_account" />

</menu>