<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddRecipeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/Theme.AddRecipe"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addRecipe_tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_addRecipe_tvTitle" />

            <EditText
                android:id="@+id/addRecipe_etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:inputType="textCapSentences|textAutoCorrect"
                android:hint="Recipe name..." />

            <TextView
                android:id="@+id/addRecipe_tvDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_addRecipe_tvDesc" />

            <EditText
                android:id="@+id/addRecipe_etDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
                android:hint="Recipe short description..." />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/addRecipe_tvPortions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_marginEnd="16dp"
                    android:text="Portions" />

                <EditText
                    android:id="@+id/addRecipe_etPortions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/addRecipe_tvTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_marginEnd="16dp"
                    android:text="@string/s_addRecipe_tvTime" />

                <EditText
                    android:id="@+id/addRecipe_etTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="0" />

                <TextView
                    android:id="@+id/addRecipe_tvMinutes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingHorizontal="16dp"
                    android:text="@string/s_addRecipe_tvMinutes" />

            </LinearLayout>

            <TextView
                android:id="@+id/addRecipe_tvIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_addRecipe_tvIngredients" />

            <EditText
                android:id="@+id/addRecipe_etIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/addRecipe_tvSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_addRecipe_tvSteps" />

            <EditText
                android:id="@+id/addRecipe_etSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/addRecipe_tvDifficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_addRecipe_tvDifficulty" />

            <Spinner
                android:id="@+id/addRecipe_spDifficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/arr_difficulty"
                android:padding="8dp" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:numStars="5"
                android:stepSize="0.5"
                android:progressTint="@color/secondary" />
        </LinearLayout>
    </FrameLayout>
</layout>